[package]
name = "rustDatabook"
version = "1.1.2"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/salmmanfred/rustDatabook"
license = "MIT"
description = "A system for accessing data in a rdb file"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfile = "1.0.0"
regex = "1"
